[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dandelion-orchestrator"
version = "0.1.2"
description = "Composable Agent Workflow Engine with resumable human checkpoints."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Agent Orchestrator Maintainers"}]
license = {text = "MIT"}
keywords = ["agents", "workflow", "orchestration", "checkpoint", "sse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gly-hub/agent-orchestrator"
Documentation = "https://github.com/gly-hub/agent-orchestrator#readme"
Issues = "https://github.com/gly-hub/agent-orchestrator/issues"

[project.optional-dependencies]
sqlite = []
aiohttp = ["aiohttp>=3.9.0"]
claude = ["claude-agent-sdk>=0.2.101"]
redis = ["redis>=5.0.0"]
all = ["aiohttp>=3.9.0", "claude-agent-sdk>=0.2.101", "redis>=5.0.0"]
dev = ["ruff>=0.6.0", "pyright>=1.1.370", "redis>=5.0.0", "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_orchestrator = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP046"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B007", "E402"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agent_orchestrator"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportIncompatibleVariableOverride = false
